  Objective-C don't support secure coding, added a
  "supportsSecureCoding" implementation to make this explicit.

* Issue #182: The block signature registered in the ObjC runtime
  datastructures for Python blocks was wrong, which confuses Objective-C
  code that looks at the runtime data.

* Fix requirement info in Collaboration setup.py.

  Patch by Alex Chekunkov.


Version 3.2.2
-------------

Bugfixes:

* Issue #162: Fix conversion of unicode python string to Objective-C "UniChar"
  array, it used to do the wrong thing when converting characters outside of
  the BMP.

  Fix by Ted Morin and Benoit Pierre.

Version 3.2.1
-------------

Updates:

* Small change to the shared setup.py code for framework wrappers to allow
  building wheels for wrappers without a C exention on any system.

  This was mostly done to make it easier to provide wheels in future releases.

Bugfixes:

* Avoid build error with Python 2.7 when using the OSX 10.12 SDK, triggered
  when Python was build using MacPython support.

* Compatibility definitions for MAC_OS_X_VERSION_10_10, MAC_OS_X_VERSION_10_11
  and MAC_OS_X_VERSION_10_12 were wrong, adjusted these.

* Fix obscure crash in test suite of pyobjc-core: the definition of a class
  that claims to conform to a protocol but didn't actually conform could
  result in having a partial class definition in the Objective-C runtime.

* Updated implementation for ``NSMutableArray.extend``. This both avoids an
  error with the list interface tests in Python 3.6, and avoids unnecessary
  memory usage with large arguments.


Version 3.2
-----------

**Backward compatibility note:** Due to a change in the way the default
method signature is calculated PyObjC is now more strict in enforcing
the Python<->Objective-C mapping for selectors and a number of code patterns
that were allowed before are no longer allowed, in particular the following
method definitions raise ``objc.BadPrototypeError``::

   class MyObject (NSObject):