@@ -63,7 +63,10 @@ def _run_atos(stack):
     if _atos_command is None:
         if os.path.exists('/usr/bin/atos'):
             _atos_command = '/usr/bin/atos'
-            if int(os.uname()[2].split('.')[0]) >= 13:
+
+            if os.uname()[2].startswith('13.'):
+                # The atos command on OSX 10.9 gives a usage
+                # warning that's surpressed with the "-d" option.
                 _atos_command += ' -d'
 
         elif os.path.exists('/usr/bin/xcrun'):
